# suas-interop-clients

./: .flake8  .gitignore  .travis.yml  README.md  check_point.py  get_info.py  interface.py  interop.py  interop_check_point.py  interop_delete_all_targets.py  interop_get_info.py  interop_interface.py  interop_read_targets.py  interop_submit_targets.py  pyproject.toml  read_targets.py  smoke_test.py  submit_targets.py  tox.ini  waypoint_grader.py
.github/workflows/: build.yml
interop_clients/: __init__.py  api.py  cli.py  cli_odlc.py  cli_telem.py  client.py  interop.py
interop_clients/geo/: boundary.py  cli.py
interop_clients/tools/: __init__.py  check_point.py  delete_all_targets.py  get_info.py  interface.py  read_targets.py  submit_targets.py  waypoint_grader.py
testdata/odlcs/: 1.json  2.json  3.json  4.json  5.json  6.json
tests/: smoke_test.py
